[metadata]
name = btass
version = 0.1.0
author = R. Douglas G. Aquino, Valfrido da Ponte Prado Junior
author_email = aquinordga@gmail.com, juniorprado@alu.ufc.br
description = btass: Bootstrapping Technique applied in Algorithm Selection System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://aquinordg.github.io/btass/
project_urls =
    Bug Tracker = https://github.com/aquinordg/btass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy

[options.packages.find]
where = src
